--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="main.js"></script>
+    <script src="index.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet"
           type="text/css"
-          href="main.css"/>
+          href="index.css"/>
 </head>
 
 <body>
