--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Yolanda Maso</title>
     <link rel="stylesheet"
           type="text/css"
-          href="index.css"/>
+          href="style.css"/>
 </head>
 
 <body>
@@ -24,6 +24,9 @@
         <button id="gaskeun" type="button" onclick="customtext()">gaskeun</button>
     </form>
     <br>
+    <div id="image" align="center">
+        <img id="bestpic" src="images/lose.jpg" style="display: none"/>
+    </div>
     <p id="output">
         Aku bakal ngucapin disini
     </p>
