--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
         <button id="gaskeun" type="button" onclick="customtext()">gaskeun</button>
     </form>
     <br>
+    <p>setiap kali apa yang kamu ketik terhandle dengan code ku, counternya nambah 1. kalau counternya sampe 3 kamu dapat hadiah</p>
+    <p id="counter">Counter = 0</p>
+    <br>
+    <br>
     <div id="image" align="center">
-        <img id="bestpic" src="images/lose.jpg" style="display: none"/>
     </div>
     <p id="output">
         Aku bakal ngucapin disini
