--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <script src="index.js"></script>
     <meta charset="UTF-8">
-    <title>Yolanda Maso</title>
+    <title>Spirit Lifter 5000</title>
     <link rel="stylesheet"
           type="text/css"
           href="index.css"/>
 </head>
 
 <body>
-    <h1>Selamat datang di "Makasih Yola" generator</h1>
+    <h1>Selamat datang di "Spirit Lifter 5000" generator</h1>
     <p>quick buttons</p>
-    <button id="defthanks1" onclick="defthanks1()">Makasih Yola x 1000</button>
-    <button id="defthanks2" onclick="defthanks2()">Makasih yola x 5000</button><br>
-    <button id="defsorry1" onclick="defsorry1()">Maaf yola :( x 1000</button>
-    <button id="defsorry2" onclick="defsorry2()">Maaf yola :( x 5000</button><br><br><br>
+    <button id="defthanks1" onclick="iloveyou()">I Love You x 3000</button>
+    <button id="defthanks2" onclick="aishiteru()">Aishiteru x 3000</button><br>
+    <button id="defsorry1" onclick="saranghae()">Saranghae :( x 3000</button>
+    <button id="defsorry2" onclick="sayangkamu()">Aku sayang kamu :( x 3000</button><br><br><br>
     <form>
         Apa yang mau disampaikan:<br>
         <input type="text" name="input" id="input1"><br>
@@ -24,8 +24,7 @@
         <button id="gaskeun" type="button" onclick="customtext()">gaskeun</button>
     </form>
     <br>
-    <p>setiap kali apa yang kamu ketik terhandle dengan code ku, counternya nambah 1. kalau counternya sampe 3 kamu dapat hadiah</p>
-    <p id="counter">Counter = 0</p>
+    <button id="showimg" onclick="showimg()">Get A Random Wholesome Pics Here!</button>
     <br>
     <br>
     <div id="image" align="center">
