update lagi tapi boong

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <script src="index.js"></script>
     <meta charset="UTF-8">
-    <title>Spirit Lifter 5000</title>
+    <title>Spirit Lifter</title>
     <link rel="stylesheet"
           type="text/css"
           href="index.css"/>
 </head>
 
 <body>
-    <h1>Selamat datang di "Spirit Lifter 5000" generator</h1>
+    <h1>Selamat datang di "Spirit Lifter" generator</h1>
     <p>quick buttons</p>
     <button id="defthanks1" onclick="iloveyou()">I Love You x 3000</button>
     <button id="defthanks2" onclick="aishiteru()">Aishiteru x 3000</button><br>
